--- a/apk/res/values-af/strings.xml
+++ b/apk/res/values-af/strings.xml
@@ -39,6 +39,10 @@
     <string name="browse_data_title" msgid="5232691805953326097">"Blaai deur data"</string>
     <string name="browse_data_subtitle" msgid="7025164374898103993">"Kyk na data en watter apps toegang daartoe het"</string>
     <string name="manage_data_summary" msgid="8537870912521944449">"Vee Outomaties Uit, databronne, rugsteun en terugstelling"</string>
+    <!-- no translation found for banner_group_more_items (1071243933488973950) -->
+    <skip />
+    <!-- no translation found for banner_group_fewer_items (3792478123282046349) -->
+    <skip />
     <string name="backup_title" msgid="211503191266235085">"Rugsteun"</string>
     <string name="data_sources_and_priority_title" msgid="2360222350913604558">"Databronne en prioriteit"</string>
     <string name="set_units_title" msgid="2657822539603758029">"Stel eenhede"</string>
@@ -1195,10 +1199,7 @@
     <string name="allow_all_the_time_prompt" msgid="5625132426961157398">"Laat <xliff:g id="APP_NAME">%1$s</xliff:g> toe om altyd toegang tot fiksheid- en welstanddata te hê?"</string>
     <string name="current_access" msgid="1457167070428176139">"<xliff:g id="APP_NAME">%1$s</xliff:g> het toegang tot <xliff:g id="DATA_TYPES">%2$s</xliff:g>."</string>
     <string name="manage_fitness_and_wellness_permissions" msgid="6198936108436598267">"Bestuur fiksheid- en welstandtoestemmings"</string>
-    <!-- no translation found for used_by_apps_count (1384912521974773617) -->
-    <skip />
-    <!-- no translation found for not_used_in_past_24_hours (7918784815693928054) -->
-    <skip />
-    <!-- no translation found for accessed (4424701457530587176) -->
-    <skip />
+    <string name="used_by_apps_count" msgid="1384912521974773617">"{count,plural, =1{Gebruik deur 1 app}other{Gebruik deur # apps}}"</string>
+    <string name="not_used_in_past_24_hours" msgid="7918784815693928054">"Nie in die afgelope 24 uur gebruik nie"</string>
+    <string name="accessed" msgid="4424701457530587176">"<xliff:g id="RECENT_ACCESS_TIME">%1$s</xliff:g> laas toegang verkry"</string>
 </resources>
