--- a/apk/res/values-ne/strings.xml
+++ b/apk/res/values-ne/strings.xml
@@ -39,6 +39,10 @@
     <string name="browse_data_title" msgid="5232691805953326097">"डेटा ब्राउज गर्नुहोस्"</string>
     <string name="browse_data_subtitle" msgid="7025164374898103993">"जानकारी र कुन कुन एपले उक्त जानकारी एक्सेस गर्न सक्छन् भन्ने कुरा हेर्नुहोस्"</string>
     <string name="manage_data_summary" msgid="8537870912521944449">"स्वतः मेटाउने सुविधा, डेटाको स्रोत, ब्याकअप र रिस्टोर गर्ने सुविधा"</string>
+    <!-- no translation found for banner_group_more_items (1071243933488973950) -->
+    <skip />
+    <!-- no translation found for banner_group_fewer_items (3792478123282046349) -->
+    <skip />
     <string name="backup_title" msgid="211503191266235085">"ब्याकअप"</string>
     <string name="data_sources_and_priority_title" msgid="2360222350913604558">"डेटाका स्रोतहरू र प्राथमिकता"</string>
     <string name="set_units_title" msgid="2657822539603758029">"एकाइ सेट गर्नुहोस्"</string>
@@ -1195,10 +1199,7 @@
     <string name="allow_all_the_time_prompt" msgid="5625132426961157398">"<xliff:g id="APP_NAME">%1$s</xliff:g> लाई सधैँ तन्दुरुस्ती तथा आरोग्यसम्बन्धी जानकारी एक्सेस गर्न दिने हो?"</string>
     <string name="current_access" msgid="1457167070428176139">"<xliff:g id="APP_NAME">%1$s</xliff:g> लाई <xliff:g id="DATA_TYPES">%2$s</xliff:g> एक्सेस गर्ने अनुमति दिइएको छ।"</string>
     <string name="manage_fitness_and_wellness_permissions" msgid="6198936108436598267">"तन्दुरुस्ती तथा आरोग्यसम्बन्धी अनुमतिहरू व्यवस्थापन गर्नुहोस्"</string>
-    <!-- no translation found for used_by_apps_count (1384912521974773617) -->
-    <skip />
-    <!-- no translation found for not_used_in_past_24_hours (7918784815693928054) -->
-    <skip />
-    <!-- no translation found for accessed (4424701457530587176) -->
-    <skip />
+    <string name="used_by_apps_count" msgid="1384912521974773617">"{count,plural, =1{एउटा एपले प्रयोग गरेको}other{# वटा एपले प्रयोग गरेका}}"</string>
+    <string name="not_used_in_past_24_hours" msgid="7918784815693928054">"पछिल्लो २४ घण्टामा प्रयोग गरिएको छैन"</string>
+    <string name="accessed" msgid="4424701457530587176">"<xliff:g id="RECENT_ACCESS_TIME">%1$s</xliff:g> मा एक्सेस गरिएको"</string>
 </resources>
