--- a/apk/res/values-or/strings.xml
+++ b/apk/res/values-or/strings.xml
@@ -39,6 +39,10 @@
     <string name="browse_data_title" msgid="5232691805953326097">"ଡାଟା ବ୍ରାଉଜ କରନ୍ତୁ"</string>
     <string name="browse_data_subtitle" msgid="7025164374898103993">"ଡାଟା ଦେଖନ୍ତୁ ଏବଂ କେଉଁ ଆପ୍ସ ଏହାକୁ ଆକ୍ସେସ କରିପାରିବ ତାହା ଜାଣନ୍ତୁ"</string>
     <string name="manage_data_summary" msgid="8537870912521944449">"ଅଟୋ-ଡିଲିଟ, ଡାଟା ସୋର୍ସ, ବେକଅପ ଏବଂ ରିଷ୍ଟୋର"</string>
+    <!-- no translation found for banner_group_more_items (1071243933488973950) -->
+    <skip />
+    <!-- no translation found for banner_group_fewer_items (3792478123282046349) -->
+    <skip />
     <string name="backup_title" msgid="211503191266235085">"ବେକଅପ ନିଅନ୍ତୁ"</string>
     <string name="data_sources_and_priority_title" msgid="2360222350913604558">"ଡାଟା ସୋର୍ସ ଏବଂ ପ୍ରାଥମିକତା"</string>
     <string name="set_units_title" msgid="2657822539603758029">"ୟୁନିଟ ସେଟ କରନ୍ତୁ"</string>
@@ -1195,10 +1199,7 @@
     <string name="allow_all_the_time_prompt" msgid="5625132426961157398">"ସର୍ବଦା ଫିଟନେସ ଏବଂ ସୁସ୍ଥତା ଡାଟାକୁ ଆକ୍ସେସ କରିବା ପାଇଁ <xliff:g id="APP_NAME">%1$s</xliff:g>କୁ ଅନୁମତି ଦେବେ?"</string>
     <string name="current_access" msgid="1457167070428176139">"<xliff:g id="APP_NAME">%1$s</xliff:g>ର <xliff:g id="DATA_TYPES">%2$s</xliff:g>କୁ ଆକ୍ସେସ ଅଛି।"</string>
     <string name="manage_fitness_and_wellness_permissions" msgid="6198936108436598267">"ଫିଟନେସ ଏବଂ ସୁସ୍ଥତା ଅନୁମତିଗୁଡ଼ିକୁ ପରିଚାଳନା କରନ୍ତୁ"</string>
-    <!-- no translation found for used_by_apps_count (1384912521974773617) -->
-    <skip />
-    <!-- no translation found for not_used_in_past_24_hours (7918784815693928054) -->
-    <skip />
-    <!-- no translation found for accessed (4424701457530587176) -->
-    <skip />
+    <string name="used_by_apps_count" msgid="1384912521974773617">"{count,plural, =1{1 ଆପ ଦ୍ୱାରା ବ୍ୟବହାର କରାଯାଇଛି}other{# ଆପ ଦ୍ୱାରା ବ୍ୟବହାର କରାଯାଇଛି}}"</string>
+    <string name="not_used_in_past_24_hours" msgid="7918784815693928054">"ଗତ 24 ଘଣ୍ଟାରେ ବ୍ୟବହାର କରାଯାଇନାହିଁ"</string>
+    <string name="accessed" msgid="4424701457530587176">"<xliff:g id="RECENT_ACCESS_TIME">%1$s</xliff:g>ରେ ଆକ୍ସେସ କରାଯାଇଛି"</string>
 </resources>
