--- a/apk/res/values-sq/strings.xml
+++ b/apk/res/values-sq/strings.xml
@@ -39,6 +39,10 @@
     <string name="browse_data_title" msgid="5232691805953326097">"Shfleto të dhënat"</string>
     <string name="browse_data_subtitle" msgid="7025164374898103993">"Shiko të dhënat dhe se cilat aplikacione mund të kenë qasje në to"</string>
     <string name="manage_data_summary" msgid="8537870912521944449">"Fshirja automatike, burimet e të dhënave, rezervimi dhe restaurimi"</string>
+    <!-- no translation found for banner_group_more_items (1071243933488973950) -->
+    <skip />
+    <!-- no translation found for banner_group_fewer_items (3792478123282046349) -->
+    <skip />
     <string name="backup_title" msgid="211503191266235085">"Rezervimi"</string>
     <string name="data_sources_and_priority_title" msgid="2360222350913604558">"Burimet e të dhënave dhe përparësia"</string>
     <string name="set_units_title" msgid="2657822539603758029">"Cakto njësitë"</string>
@@ -1195,10 +1199,7 @@
     <string name="allow_all_the_time_prompt" msgid="5625132426961157398">"Të lejohet që <xliff:g id="APP_NAME">%1$s</xliff:g> të ketë qasje te të dhënat për fitnesin dhe mirëqenien gjatë gjithë kohës?"</string>
     <string name="current_access" msgid="1457167070428176139">"<xliff:g id="APP_NAME">%1$s</xliff:g> ka qasje te <xliff:g id="DATA_TYPES">%2$s</xliff:g>."</string>
     <string name="manage_fitness_and_wellness_permissions" msgid="6198936108436598267">"Menaxho lejet për fitnesin dhe mirëqenien"</string>
-    <!-- no translation found for used_by_apps_count (1384912521974773617) -->
-    <skip />
-    <!-- no translation found for not_used_in_past_24_hours (7918784815693928054) -->
-    <skip />
-    <!-- no translation found for accessed (4424701457530587176) -->
-    <skip />
+    <string name="used_by_apps_count" msgid="1384912521974773617">"{count,plural, =1{Përdorur nga 1 aplikacion}other{Përdorur nga # aplikacione}}"</string>
+    <string name="not_used_in_past_24_hours" msgid="7918784815693928054">"Asnjë përdorim gjatë 24 orëve të fundit"</string>
+    <string name="accessed" msgid="4424701457530587176">"Qasja e fundit në <xliff:g id="RECENT_ACCESS_TIME">%1$s</xliff:g>"</string>
 </resources>
