--- a/apk/res/values-uk/strings.xml
+++ b/apk/res/values-uk/strings.xml
@@ -39,6 +39,10 @@
     <string name="browse_data_title" msgid="5232691805953326097">"Переглянути дані"</string>
     <string name="browse_data_subtitle" msgid="7025164374898103993">"Переглядайте дані й додатки, які мають доступ до них"</string>
     <string name="manage_data_summary" msgid="8537870912521944449">"Автоматичне видалення, джерела даних, резервне копіювання й відновлення"</string>
+    <!-- no translation found for banner_group_more_items (1071243933488973950) -->
+    <skip />
+    <!-- no translation found for banner_group_fewer_items (3792478123282046349) -->
+    <skip />
     <string name="backup_title" msgid="211503191266235085">"Резервне копіювання"</string>
     <string name="data_sources_and_priority_title" msgid="2360222350913604558">"Джерела даних і пріоритет"</string>
     <string name="set_units_title" msgid="2657822539603758029">"Вибрати одиниці вимірювання"</string>
@@ -1195,10 +1199,7 @@
     <string name="allow_all_the_time_prompt" msgid="5625132426961157398">"Завжди дозволяти додатку <xliff:g id="APP_NAME">%1$s</xliff:g> доступ до даних про фізичну активність і здоров’я?"</string>
     <string name="current_access" msgid="1457167070428176139">"Додаток <xliff:g id="APP_NAME">%1$s</xliff:g> має доступ до таких даних: <xliff:g id="DATA_TYPES">%2$s</xliff:g>."</string>
     <string name="manage_fitness_and_wellness_permissions" msgid="6198936108436598267">"Керувати дозволами для даних про активність і здоров’я"</string>
-    <!-- no translation found for used_by_apps_count (1384912521974773617) -->
-    <skip />
-    <!-- no translation found for not_used_in_past_24_hours (7918784815693928054) -->
-    <skip />
-    <!-- no translation found for accessed (4424701457530587176) -->
-    <skip />
+    <string name="used_by_apps_count" msgid="1384912521974773617">"{count,plural, =1{Використано в 1 додатку}one{Використано в # додатку}few{Використано в # додатках}many{Використано в # додатках}other{Використано в # додатка}}"</string>
+    <string name="not_used_in_past_24_hours" msgid="7918784815693928054">"Дозвіл не використовувався протягом останніх 24 годин"</string>
+    <string name="accessed" msgid="4424701457530587176">"Останній доступ: <xliff:g id="RECENT_ACCESS_TIME">%1$s</xliff:g>"</string>
 </resources>
