--- a/apk/res/values-as/strings.xml
+++ b/apk/res/values-as/strings.xml
@@ -39,10 +39,8 @@
     <string name="browse_data_title" msgid="5232691805953326097">"ডেটা ব্ৰাউজ কৰক"</string>
     <string name="browse_data_subtitle" msgid="7025164374898103993">"ডেটা আৰু সেয়া এক্সেছ কৰিব পৰা এপ্‌সমূহ চাওক"</string>
     <string name="manage_data_summary" msgid="8537870912521944449">"স্বয়ংক্ৰিয়ভাৱে মচা, ডেটাৰ উৎস, বেকআপ আৰু পুনঃস্থাপন"</string>
-    <!-- no translation found for banner_group_more_items (1071243933488973950) -->
-    <skip />
-    <!-- no translation found for banner_group_fewer_items (3792478123282046349) -->
-    <skip />
+    <string name="banner_group_more_items" msgid="1071243933488973950">"অধিক বস্তু"</string>
+    <string name="banner_group_fewer_items" msgid="3792478123282046349">"কম বস্তু"</string>
     <string name="backup_title" msgid="211503191266235085">"বেকআপ"</string>
     <string name="data_sources_and_priority_title" msgid="2360222350913604558">"ডেটাৰ উৎস আৰু অগ্ৰাধিকাৰ"</string>
     <string name="set_units_title" msgid="2657822539603758029">"একক ছেট কৰক"</string>
