--- a/apk/res/values-az/strings.xml
+++ b/apk/res/values-az/strings.xml
@@ -39,10 +39,8 @@
     <string name="browse_data_title" msgid="5232691805953326097">"Datanı axtarın"</string>
     <string name="browse_data_subtitle" msgid="7025164374898103993">"Data və hansı tətbiqlərin ona daxil ola biləcəyinə baxın"</string>
     <string name="manage_data_summary" msgid="8537870912521944449">"Avtomatik silmə, data mənbələri, yedəkləmə və bərpa"</string>
-    <!-- no translation found for banner_group_more_items (1071243933488973950) -->
-    <skip />
-    <!-- no translation found for banner_group_fewer_items (3792478123282046349) -->
-    <skip />
+    <string name="banner_group_more_items" msgid="1071243933488973950">"Daha çox element"</string>
+    <string name="banner_group_fewer_items" msgid="3792478123282046349">"Daha az element"</string>
     <string name="backup_title" msgid="211503191266235085">"Yedəkləyin"</string>
     <string name="data_sources_and_priority_title" msgid="2360222350913604558">"Data mənbələri və prioritet"</string>
     <string name="set_units_title" msgid="2657822539603758029">"Vahid təyini"</string>
