--- a/apk/res/values-fr/strings.xml
+++ b/apk/res/values-fr/strings.xml
@@ -39,10 +39,8 @@
     <string name="browse_data_title" msgid="5232691805953326097">"Parcourir les données"</string>
     <string name="browse_data_subtitle" msgid="7025164374898103993">"Voir les données et les applis qui y ont accès"</string>
     <string name="manage_data_summary" msgid="8537870912521944449">"Suppression automatique, sources de données, sauvegarde et restauration"</string>
-    <!-- no translation found for banner_group_more_items (1071243933488973950) -->
-    <skip />
-    <!-- no translation found for banner_group_fewer_items (3792478123282046349) -->
-    <skip />
+    <string name="banner_group_more_items" msgid="1071243933488973950">"Plus d\'éléments"</string>
+    <string name="banner_group_fewer_items" msgid="3792478123282046349">"Moins d\'éléments"</string>
     <string name="backup_title" msgid="211503191266235085">"Sauvegarde"</string>
     <string name="data_sources_and_priority_title" msgid="2360222350913604558">"Sources de données et priorité"</string>
     <string name="set_units_title" msgid="2657822539603758029">"Définir des unités"</string>
