--- a/apk/res/values-gu/strings.xml
+++ b/apk/res/values-gu/strings.xml
@@ -39,10 +39,8 @@
     <string name="browse_data_title" msgid="5232691805953326097">"ડેટા બ્રાઉઝ કરો"</string>
     <string name="browse_data_subtitle" msgid="7025164374898103993">"ડેટા અને કઈ ઍપ તેને ઍક્સેસ કરી શકે છે તે જુઓ"</string>
     <string name="manage_data_summary" msgid="8537870912521944449">"ઑટોમૅટિક રીતે ડિલીટ કરો, ડેટા સૉર્સ, બૅકઅપ લો અને રિસ્ટોર કરો"</string>
-    <!-- no translation found for banner_group_more_items (1071243933488973950) -->
-    <skip />
-    <!-- no translation found for banner_group_fewer_items (3792478123282046349) -->
-    <skip />
+    <string name="banner_group_more_items" msgid="1071243933488973950">"વધુ આઇટમ"</string>
+    <string name="banner_group_fewer_items" msgid="3792478123282046349">"ઓછી આઇટમ"</string>
     <string name="backup_title" msgid="211503191266235085">"બૅકઅપ"</string>
     <string name="data_sources_and_priority_title" msgid="2360222350913604558">"ડેટા સૉર્સ અને પ્રાધાન્યતા"</string>
     <string name="set_units_title" msgid="2657822539603758029">"એકમો સેટ કરો"</string>
