--- a/apk/res/values-is/strings.xml
+++ b/apk/res/values-is/strings.xml
@@ -39,10 +39,8 @@
     <string name="browse_data_title" msgid="5232691805953326097">"Skoða gögn"</string>
     <string name="browse_data_subtitle" msgid="7025164374898103993">"Sjá gögn og forrit sem hafa aðgang að þeim"</string>
     <string name="manage_data_summary" msgid="8537870912521944449">"Sjálfvirk eyðing, gagnauppsprettur, öryggisafrit og endurheimt"</string>
-    <!-- no translation found for banner_group_more_items (1071243933488973950) -->
-    <skip />
-    <!-- no translation found for banner_group_fewer_items (3792478123282046349) -->
-    <skip />
+    <string name="banner_group_more_items" msgid="1071243933488973950">"Fleiri vörur"</string>
+    <string name="banner_group_fewer_items" msgid="3792478123282046349">"Færri atriði"</string>
     <string name="backup_title" msgid="211503191266235085">"Öryggisafrit"</string>
     <string name="data_sources_and_priority_title" msgid="2360222350913604558">"Gagnauppsprettur og forgangur"</string>
     <string name="set_units_title" msgid="2657822539603758029">"Velja mælieiningar"</string>
