--- a/apk/res/values-km/strings.xml
+++ b/apk/res/values-km/strings.xml
@@ -39,10 +39,8 @@
     <string name="browse_data_title" msgid="5232691805953326097">"រុករកទិន្នន័យ"</string>
     <string name="browse_data_subtitle" msgid="7025164374898103993">"មើល​ទិន្នន័យ និង​ថាតើ​កម្មវិធី​ណាខ្លះ​អាចចូលប្រើ​វាបាន"</string>
     <string name="manage_data_summary" msgid="8537870912521944449">"ការលុបដោយស្វ័យប្រវត្តិ ប្រភពទិន្នន័យ ការបម្រុងទុក និងការស្ដារ"</string>
-    <!-- no translation found for banner_group_more_items (1071243933488973950) -->
-    <skip />
-    <!-- no translation found for banner_group_fewer_items (3792478123282046349) -->
-    <skip />
+    <string name="banner_group_more_items" msgid="1071243933488973950">"ធាតុច្រើនទៀត"</string>
+    <string name="banner_group_fewer_items" msgid="3792478123282046349">"ធាតុតិចជាងនេះ"</string>
     <string name="backup_title" msgid="211503191266235085">"បម្រុង​ទុក"</string>
     <string name="data_sources_and_priority_title" msgid="2360222350913604558">"ប្រភពទិន្នន័យ និងអាទិភាព"</string>
     <string name="set_units_title" msgid="2657822539603758029">"កំណត់ឯកតា"</string>
