--- a/apk/res/values-kn/strings.xml
+++ b/apk/res/values-kn/strings.xml
@@ -39,10 +39,8 @@
     <string name="browse_data_title" msgid="5232691805953326097">"ಡೇಟಾ ಬ್ರೌಸ್ ಮಾಡಿ"</string>
     <string name="browse_data_subtitle" msgid="7025164374898103993">"ಡೇಟಾವನ್ನು ಮತ್ತು ಯಾವ ಆ್ಯಪ್‌ಗಳು ಅದನ್ನು ಆ್ಯಕ್ಸೆಸ್‌ ಮಾಡಬಹುದು ಎಂಬುದನ್ನು ನೋಡಿ"</string>
     <string name="manage_data_summary" msgid="8537870912521944449">"ಸ್ವಯಂ-ಅಳಿಸುವಿಕೆ, ಡೇಟಾ ಮೂಲಗಳು, ಬ್ಯಾಕಪ್ ಮತ್ತು ಮರುಸ್ಥಾಪನೆ"</string>
-    <!-- no translation found for banner_group_more_items (1071243933488973950) -->
-    <skip />
-    <!-- no translation found for banner_group_fewer_items (3792478123282046349) -->
-    <skip />
+    <string name="banner_group_more_items" msgid="1071243933488973950">"ಇನ್ನಷ್ಟು ಐಟಂಗಳು"</string>
+    <string name="banner_group_fewer_items" msgid="3792478123282046349">"ಕಡಿಮೆ ಐಟಂಗಳು"</string>
     <string name="backup_title" msgid="211503191266235085">"ಬ್ಯಾಕಪ್"</string>
     <string name="data_sources_and_priority_title" msgid="2360222350913604558">"ಡೇಟಾ ಮೂಲಗಳು ಮತ್ತು ಆದ್ಯತೆ"</string>
     <string name="set_units_title" msgid="2657822539603758029">"ಯೂನಿಟ್‌ಗಳನ್ನು ಸೆಟ್ ಮಾಡಿ"</string>
