--- a/apk/res/values-ko/strings.xml
+++ b/apk/res/values-ko/strings.xml
@@ -39,10 +39,8 @@
     <string name="browse_data_title" msgid="5232691805953326097">"데이터 둘러보기"</string>
     <string name="browse_data_subtitle" msgid="7025164374898103993">"데이터 및 데이터에 액세스할 수 있는 앱 확인"</string>
     <string name="manage_data_summary" msgid="8537870912521944449">"자동 삭제, 데이터 소스, 백업 및 복원"</string>
-    <!-- no translation found for banner_group_more_items (1071243933488973950) -->
-    <skip />
-    <!-- no translation found for banner_group_fewer_items (3792478123282046349) -->
-    <skip />
+    <string name="banner_group_more_items" msgid="1071243933488973950">"항목 더보기"</string>
+    <string name="banner_group_fewer_items" msgid="3792478123282046349">"항목 간략히 보기"</string>
     <string name="backup_title" msgid="211503191266235085">"백업"</string>
     <string name="data_sources_and_priority_title" msgid="2360222350913604558">"데이터 소스 및 우선순위"</string>
     <string name="set_units_title" msgid="2657822539603758029">"단위 설정"</string>
