--- a/apk/res/values-mr/strings.xml
+++ b/apk/res/values-mr/strings.xml
@@ -39,10 +39,8 @@
     <string name="browse_data_title" msgid="5232691805953326097">"डेटा ब्राउझ करा"</string>
     <string name="browse_data_subtitle" msgid="7025164374898103993">"डेटा आणि कोणती अ‍ॅप्स तो अ‍ॅक्सेस करू शकतात ते पहा"</string>
     <string name="manage_data_summary" msgid="8537870912521944449">"ऑटो-डिलीट, डेटा स्रोत, बॅकअप आणि रिस्टोअर करणे"</string>
-    <!-- no translation found for banner_group_more_items (1071243933488973950) -->
-    <skip />
-    <!-- no translation found for banner_group_fewer_items (3792478123282046349) -->
-    <skip />
+    <string name="banner_group_more_items" msgid="1071243933488973950">"आणखी आयटम"</string>
+    <string name="banner_group_fewer_items" msgid="3792478123282046349">"कमी आयटम"</string>
     <string name="backup_title" msgid="211503191266235085">"बॅकअप"</string>
     <string name="data_sources_and_priority_title" msgid="2360222350913604558">"डेटा स्रोत आणि प्राधान्य"</string>
     <string name="set_units_title" msgid="2657822539603758029">"युनिट सेट करा"</string>
