--- a/apk/res/values-my/strings.xml
+++ b/apk/res/values-my/strings.xml
@@ -39,10 +39,8 @@
     <string name="browse_data_title" msgid="5232691805953326097">"ဒေတာကြည့်ရန်"</string>
     <string name="browse_data_subtitle" msgid="7025164374898103993">"ဒေတာနှင့် ၎င်းအားသုံးနိုင်သည့် အက်ပ်များကို ကြည့်ရန်"</string>
     <string name="manage_data_summary" msgid="8537870912521944449">"အလိုအလျောက်ဖျက်ခြင်း၊ ဒေတာရင်းမြစ်များ၊ အရန်သိမ်းခြင်းနှင့် ပြန်ယူခြင်း"</string>
-    <!-- no translation found for banner_group_more_items (1071243933488973950) -->
-    <skip />
-    <!-- no translation found for banner_group_fewer_items (3792478123282046349) -->
-    <skip />
+    <string name="banner_group_more_items" msgid="1071243933488973950">"ဖိုင်များပိုပြပါ"</string>
+    <string name="banner_group_fewer_items" msgid="3792478123282046349">"ဖိုင်များလျှော့ပြပါ"</string>
     <string name="backup_title" msgid="211503191266235085">"အရန်သိမ်းရန်"</string>
     <string name="data_sources_and_priority_title" msgid="2360222350913604558">"ဒေတာရင်းမြစ်များနှင့် ဦးစားပေး"</string>
     <string name="set_units_title" msgid="2657822539603758029">"ယူနစ်သတ်မှတ်ရန်"</string>
