--- a/apk/res/values-pa/strings.xml
+++ b/apk/res/values-pa/strings.xml
@@ -39,10 +39,8 @@
     <string name="browse_data_title" msgid="5232691805953326097">"ਡਾਟਾ ਬ੍ਰਾਊਜ਼ ਕਰੋ"</string>
     <string name="browse_data_subtitle" msgid="7025164374898103993">"ਡਾਟਾ ਦੇਖੋ ਅਤੇ ਜਾਣੋ ਕਿ ਕਿਹੜੀਆਂ ਐਪਾਂ ਇਸ ਤੱਕ ਪਹੁੰਚ ਕਰ ਸਕਦੀਆਂ ਹਨ"</string>
     <string name="manage_data_summary" msgid="8537870912521944449">"ਸਵੈਚਲਿਤ-ਮਿਟਾਉਣ ਦੀ ਸੁਵਿਧਾ, ਡਾਟਾ ਸਰੋਤ, ਬੈਕਅੱਪ ਲੈਣ ਅਤੇ ਮੁੜ-ਬਹਾਲ ਕਰਨ ਦੀ ਸੁਵਿਧਾ"</string>
-    <!-- no translation found for banner_group_more_items (1071243933488973950) -->
-    <skip />
-    <!-- no translation found for banner_group_fewer_items (3792478123282046349) -->
-    <skip />
+    <string name="banner_group_more_items" msgid="1071243933488973950">"ਜ਼ਿਆਦਾ ਆਈਟਮਾਂ"</string>
+    <string name="banner_group_fewer_items" msgid="3792478123282046349">"ਘੱਟ ਆਈਟਮਾਂ"</string>
     <string name="backup_title" msgid="211503191266235085">"ਬੈਕਅੱਪ"</string>
     <string name="data_sources_and_priority_title" msgid="2360222350913604558">"ਡਾਟਾ ਸਰੋਤ ਅਤੇ ਤਰਜੀਹ"</string>
     <string name="set_units_title" msgid="2657822539603758029">"ਇਕਾਈਆਂ ਸੈੱਟ ਕਰੋ"</string>
