--- a/apk/res/values-si/strings.xml
+++ b/apk/res/values-si/strings.xml
@@ -39,10 +39,8 @@
     <string name="browse_data_title" msgid="5232691805953326097">"දත්ත බ්‍රවුස් කරන්න"</string>
     <string name="browse_data_subtitle" msgid="7025164374898103993">"දත්ත සහ ඒවාට ප්‍රවේශ විය හැකි යෙදුම් බලන්න"</string>
     <string name="manage_data_summary" msgid="8537870912521944449">"ස්වයංව මකා දැමීම, දත්ත මූලාශ්‍ර, උපස්ථ සහ ප්‍රතිසාධනය"</string>
-    <!-- no translation found for banner_group_more_items (1071243933488973950) -->
-    <skip />
-    <!-- no translation found for banner_group_fewer_items (3792478123282046349) -->
-    <skip />
+    <string name="banner_group_more_items" msgid="1071243933488973950">"තව අයිතම"</string>
+    <string name="banner_group_fewer_items" msgid="3792478123282046349">"අඩු අයිතම"</string>
     <string name="backup_title" msgid="211503191266235085">"උපස්ථය"</string>
     <string name="data_sources_and_priority_title" msgid="2360222350913604558">"දත්ත මූලාශ්‍ර සහ ප්‍රමුඛතාවය"</string>
     <string name="set_units_title" msgid="2657822539603758029">"ඒකක සකසන්න"</string>
