--- a/apk/res/values-te/strings.xml
+++ b/apk/res/values-te/strings.xml
@@ -39,10 +39,8 @@
     <string name="browse_data_title" msgid="5232691805953326097">"డేటాను బ్రౌజ్ చేయండి"</string>
     <string name="browse_data_subtitle" msgid="7025164374898103993">"డేటాతో పాటు, ఆ డేటాను ఏ యాప్‌లు యాక్సెస్ చేయగలవో చూడండి"</string>
     <string name="manage_data_summary" msgid="8537870912521944449">"ఆటోమేటిక్ తొలగింపు, డేటా సోర్స్‌లు, బ్యాకప్, రీస్టోర్"</string>
-    <!-- no translation found for banner_group_more_items (1071243933488973950) -->
-    <skip />
-    <!-- no translation found for banner_group_fewer_items (3792478123282046349) -->
-    <skip />
+    <string name="banner_group_more_items" msgid="1071243933488973950">"మరిన్ని ఐటెమ్‌లు"</string>
+    <string name="banner_group_fewer_items" msgid="3792478123282046349">"తక్కువ ఐటెమ్‌లు"</string>
     <string name="backup_title" msgid="211503191266235085">"బ్యాకప్"</string>
     <string name="data_sources_and_priority_title" msgid="2360222350913604558">"డేటా సోర్స్‌లు, ప్రాధాన్యత"</string>
     <string name="set_units_title" msgid="2657822539603758029">"యూనిట్‌లను సెట్ చేయండి"</string>
