--- a/apk/res/values-tr/strings.xml
+++ b/apk/res/values-tr/strings.xml
@@ -39,10 +39,8 @@
     <string name="browse_data_title" msgid="5232691805953326097">"Verilere göz atın"</string>
     <string name="browse_data_subtitle" msgid="7025164374898103993">"Verilere ve bunlara erişebilen uygulamalara göz atın"</string>
     <string name="manage_data_summary" msgid="8537870912521944449">"Otomatik silme, veri kaynakları, yedekleme ve geri yükleme"</string>
-    <!-- no translation found for banner_group_more_items (1071243933488973950) -->
-    <skip />
-    <!-- no translation found for banner_group_fewer_items (3792478123282046349) -->
-    <skip />
+    <string name="banner_group_more_items" msgid="1071243933488973950">"Daha fazla öğe"</string>
+    <string name="banner_group_fewer_items" msgid="3792478123282046349">"Daha az öğe"</string>
     <string name="backup_title" msgid="211503191266235085">"Yedekle"</string>
     <string name="data_sources_and_priority_title" msgid="2360222350913604558">"Veri kaynakları ve öncelik"</string>
     <string name="set_units_title" msgid="2657822539603758029">"Birimleri ayarla"</string>
