--- a/apk/res/values-ur/strings.xml
+++ b/apk/res/values-ur/strings.xml
@@ -39,10 +39,8 @@
     <string name="browse_data_title" msgid="5232691805953326097">"ڈیٹا براؤز کریں"</string>
     <string name="browse_data_subtitle" msgid="7025164374898103993">"ڈیٹا اور کون سی ایپس اس تک رسائی حاصل کر سکتی ہیں دیکھیں"</string>
     <string name="manage_data_summary" msgid="8537870912521944449">"خودکار طور پر حذف کرنا، ڈیٹا کے مآخذ، بیک اپ اور بحالی"</string>
-    <!-- no translation found for banner_group_more_items (1071243933488973950) -->
-    <skip />
-    <!-- no translation found for banner_group_fewer_items (3792478123282046349) -->
-    <skip />
+    <string name="banner_group_more_items" msgid="1071243933488973950">"زیادہ آئٹمز"</string>
+    <string name="banner_group_fewer_items" msgid="3792478123282046349">"کم آئٹمز"</string>
     <string name="backup_title" msgid="211503191266235085">"بیک اپ لیں"</string>
     <string name="data_sources_and_priority_title" msgid="2360222350913604558">"ڈیٹا کے ماخذات اور ترجیح"</string>
     <string name="set_units_title" msgid="2657822539603758029">"یونٹس سیٹ کریں"</string>
