--- a/apk/res/values-vi/strings.xml
+++ b/apk/res/values-vi/strings.xml
@@ -39,10 +39,8 @@
     <string name="browse_data_title" msgid="5232691805953326097">"Duyệt xem dữ liệu"</string>
     <string name="browse_data_subtitle" msgid="7025164374898103993">"Xem dữ liệu và những ứng dụng có thể truy cập vào dữ liệu đó"</string>
     <string name="manage_data_summary" msgid="8537870912521944449">"Xoá tự động, nguồn dữ liệu, sao lưu và khôi phục"</string>
-    <!-- no translation found for banner_group_more_items (1071243933488973950) -->
-    <skip />
-    <!-- no translation found for banner_group_fewer_items (3792478123282046349) -->
-    <skip />
+    <string name="banner_group_more_items" msgid="1071243933488973950">"Hiện thêm mục"</string>
+    <string name="banner_group_fewer_items" msgid="3792478123282046349">"Ẩn bớt mục"</string>
     <string name="backup_title" msgid="211503191266235085">"Sao lưu"</string>
     <string name="data_sources_and_priority_title" msgid="2360222350913604558">"Nguồn dữ liệu và mức độ ưu tiên"</string>
     <string name="set_units_title" msgid="2657822539603758029">"Đặt đơn vị"</string>
