--- a/apk/res/values-zh-rCN/strings.xml
+++ b/apk/res/values-zh-rCN/strings.xml
@@ -39,10 +39,8 @@
     <string name="browse_data_title" msgid="5232691805953326097">"浏览数据"</string>
     <string name="browse_data_subtitle" msgid="7025164374898103993">"查看数据及可以访问这些数据的应用"</string>
     <string name="manage_data_summary" msgid="8537870912521944449">"自动删除、数据源、备份和恢复"</string>
-    <!-- no translation found for banner_group_more_items (1071243933488973950) -->
-    <skip />
-    <!-- no translation found for banner_group_fewer_items (3792478123282046349) -->
-    <skip />
+    <string name="banner_group_more_items" msgid="1071243933488973950">"更多项目"</string>
+    <string name="banner_group_fewer_items" msgid="3792478123282046349">"更少项目"</string>
     <string name="backup_title" msgid="211503191266235085">"备份"</string>
     <string name="data_sources_and_priority_title" msgid="2360222350913604558">"数据源和优先级"</string>
     <string name="set_units_title" msgid="2657822539603758029">"设置单位"</string>
