--- a/apk/res/values-zh-rTW/strings.xml
+++ b/apk/res/values-zh-rTW/strings.xml
@@ -39,10 +39,8 @@
     <string name="browse_data_title" msgid="5232691805953326097">"瀏覽資料"</string>
     <string name="browse_data_subtitle" msgid="7025164374898103993">"查看資料以及可存取這類資料的應用程式"</string>
     <string name="manage_data_summary" msgid="8537870912521944449">"自動刪除、資料來源、備份和還原"</string>
-    <!-- no translation found for banner_group_more_items (1071243933488973950) -->
-    <skip />
-    <!-- no translation found for banner_group_fewer_items (3792478123282046349) -->
-    <skip />
+    <string name="banner_group_more_items" msgid="1071243933488973950">"更多項目"</string>
+    <string name="banner_group_fewer_items" msgid="3792478123282046349">"較少項目"</string>
     <string name="backup_title" msgid="211503191266235085">"備份"</string>
     <string name="data_sources_and_priority_title" msgid="2360222350913604558">"資料來源與優先順序"</string>
     <string name="set_units_title" msgid="2657822539603758029">"設定單位"</string>
