--- a/apk/res/values-hu/strings.xml
+++ b/apk/res/values-hu/strings.xml
@@ -444,7 +444,7 @@
     <string name="manage_permissions_learn_more" msgid="2503189875093300767">"Az adatvédelmi irányelvek elolvasása"</string>
     <string name="app_perms_content_provider_24h" msgid="5977152673988158889">"Hozzáfért az elmúlt 24 órában"</string>
     <string name="app_access_title" msgid="7137018424885371763">"Alkalmazás-hozzáférés"</string>
-    <string name="connected_apps_empty_list_section_title" msgid="6821215432694207342">"Jelenleg nincs kompatibilis alkalmazás telepítve"</string>
+    <string name="connected_apps_empty_list_section_title" msgid="7684166767384190933">"Nincsenek telepítve kompatibilis alkalmazások"</string>
     <string name="additional_access_label" msgid="4645249249222528341">"További hozzáférés"</string>
     <string name="additional_access_summary" msgid="1076197455435130191">"Korábbi adatok, háttéradatok"</string>
     <string name="removed_additional_permissions_toast" msgid="3443687215509477284">"Az alkalmazásra vonatkozó további engedélyek visszavonva"</string>
