--- a/apk/res/values-af/strings.xml
+++ b/apk/res/values-af/strings.xml
@@ -444,7 +444,8 @@
     <string name="manage_permissions_learn_more" msgid="2503189875093300767">"Lees die privaatheidsbeleid"</string>
     <string name="app_perms_content_provider_24h" msgid="5977152673988158889">"In afgelope 24 uur gebruik"</string>
     <string name="app_access_title" msgid="7137018424885371763">"Apptoegang"</string>
-    <string name="connected_apps_empty_list_section_title" msgid="6821215432694207342">"Jy het tans geen versoenbare apps geïnstalleer nie"</string>
+    <!-- no translation found for connected_apps_empty_list_section_title (7684166767384190933) -->
+    <skip />
     <string name="additional_access_label" msgid="4645249249222528341">"Bykomende toegang"</string>
     <string name="additional_access_summary" msgid="1076197455435130191">"Vorige data, agtergronddata"</string>
     <string name="removed_additional_permissions_toast" msgid="3443687215509477284">"Het bykomende toestemmings vir hierdie app verwyder"</string>
