--- a/apk/res/values-as/strings.xml
+++ b/apk/res/values-as/strings.xml
@@ -444,7 +444,8 @@
     <string name="manage_permissions_learn_more" msgid="2503189875093300767">"গোপনীয়তাৰ নীতি পঢ়ক"</string>
     <string name="app_perms_content_provider_24h" msgid="5977152673988158889">"যোৱা ২৪ ঘণ্টাত এক্সেছ কৰিছে"</string>
     <string name="app_access_title" msgid="7137018424885371763">"এপৰ এক্সেছ"</string>
-    <string name="connected_apps_empty_list_section_title" msgid="6821215432694207342">"বৰ্তমান আপোনাৰ ইনষ্টল কৰি থোৱা কোনো সুসংগত এপ্ নাই"</string>
+    <!-- no translation found for connected_apps_empty_list_section_title (7684166767384190933) -->
+    <skip />
     <string name="additional_access_label" msgid="4645249249222528341">"অতিৰিক্ত এক্সেছ"</string>
     <string name="additional_access_summary" msgid="1076197455435130191">"পুৰণি ডেটা নেপথ্য ডেটা"</string>
     <string name="removed_additional_permissions_toast" msgid="3443687215509477284">"এই এপ্‌টোৰ বাবে অতিৰিক্ত অনুমতি আঁতৰোৱা হৈছে"</string>
