--- a/apk/res/values-be/strings.xml
+++ b/apk/res/values-be/strings.xml
@@ -444,7 +444,7 @@
     <string name="manage_permissions_learn_more" msgid="2503189875093300767">"Азнаёміцца з палітыкай прыватнасці"</string>
     <string name="app_perms_content_provider_24h" msgid="5977152673988158889">"Апошні доступ у папярэднія 24 гадзіны"</string>
     <string name="app_access_title" msgid="7137018424885371763">"Доступы праграмы"</string>
-    <string name="connected_apps_empty_list_section_title" msgid="6821215432694207342">"У вас не ўсталяваны сумяшчальныя праграмы"</string>
+    <string name="connected_apps_empty_list_section_title" msgid="7684166767384190933">"Сумяшчальныя праграмы не ўсталяваны"</string>
     <string name="additional_access_label" msgid="4645249249222528341">"Пашыраны доступ"</string>
     <string name="additional_access_summary" msgid="1076197455435130191">"Мінулыя даныя, фонавыя даныя"</string>
     <string name="removed_additional_permissions_toast" msgid="3443687215509477284">"Дадатковыя дазволы для гэтай праграмы скасаваны"</string>
