--- a/apk/res/values-el/strings.xml
+++ b/apk/res/values-el/strings.xml
@@ -444,7 +444,7 @@
     <string name="manage_permissions_learn_more" msgid="2503189875093300767">"Ανάγνωση πολιτικής απορρήτου"</string>
     <string name="app_perms_content_provider_24h" msgid="5977152673988158889">"Πρόσβαση τις τελευταίες 24 ώρες"</string>
     <string name="app_access_title" msgid="7137018424885371763">"Πρόσβαση εφαρμογής"</string>
-    <string name="connected_apps_empty_list_section_title" msgid="6821215432694207342">"Προς το παρόν, δεν έχετε εγκαταστήσει συμβατές εφαρμογές"</string>
+    <string name="connected_apps_empty_list_section_title" msgid="7684166767384190933">"Δεν έχουν εγκατασταθεί συμβατές εφαρμογές"</string>
     <string name="additional_access_label" msgid="4645249249222528341">"Επιπλέον πρόσβαση"</string>
     <string name="additional_access_summary" msgid="1076197455435130191">"Παλιά δεδομένα, δεδομένα παρασκηνίου"</string>
     <string name="removed_additional_permissions_toast" msgid="3443687215509477284">"Καταργήθηκαν πρόσθετες άδειες για αυτή την εφαρμογή"</string>
