--- a/apk/res/values-en-rGB/strings.xml
+++ b/apk/res/values-en-rGB/strings.xml
@@ -444,7 +444,8 @@
     <string name="manage_permissions_learn_more" msgid="2503189875093300767">"Read privacy policy"</string>
     <string name="app_perms_content_provider_24h" msgid="5977152673988158889">"Accessed in last 24 hours"</string>
     <string name="app_access_title" msgid="7137018424885371763">"App access"</string>
-    <string name="connected_apps_empty_list_section_title" msgid="6821215432694207342">"You currently don\'t have any compatible apps installed"</string>
+    <!-- no translation found for connected_apps_empty_list_section_title (7684166767384190933) -->
+    <skip />
     <string name="additional_access_label" msgid="4645249249222528341">"Additional access"</string>
     <string name="additional_access_summary" msgid="1076197455435130191">"Past data, background data"</string>
     <string name="removed_additional_permissions_toast" msgid="3443687215509477284">"Removed additional permissions for this app"</string>
