--- a/apk/res/values-fr/strings.xml
+++ b/apk/res/values-fr/strings.xml
@@ -444,7 +444,7 @@
     <string name="manage_permissions_learn_more" msgid="2503189875093300767">"Lire les règles de confidentialité"</string>
     <string name="app_perms_content_provider_24h" msgid="5977152673988158889">"Accès au cours des dernières 24 heures"</string>
     <string name="app_access_title" msgid="7137018424885371763">"Accès de l\'appli"</string>
-    <string name="connected_apps_empty_list_section_title" msgid="6821215432694207342">"Aucune appli compatible n\'est installée pour le moment"</string>
+    <string name="connected_apps_empty_list_section_title" msgid="7684166767384190933">"Aucune appli compatible installée"</string>
     <string name="additional_access_label" msgid="4645249249222528341">"Accès supplémentaires"</string>
     <string name="additional_access_summary" msgid="1076197455435130191">"Anciennes données, données en arrière-plan"</string>
     <string name="removed_additional_permissions_toast" msgid="3443687215509477284">"D\'autres autorisations ont été révoquées pour cette appli"</string>
