--- a/apk/res/values-lt/strings.xml
+++ b/apk/res/values-lt/strings.xml
@@ -444,7 +444,7 @@
     <string name="manage_permissions_learn_more" msgid="2503189875093300767">"Skaityti privatumo politiką"</string>
     <string name="app_perms_content_provider_24h" msgid="5977152673988158889">"Pasiekta per pastarąsias 24 val."</string>
     <string name="app_access_title" msgid="7137018424885371763">"Programos prieiga"</string>
-    <string name="connected_apps_empty_list_section_title" msgid="6821215432694207342">"Šiuo metu neturite įdiegtų suderinamų programų"</string>
+    <string name="connected_apps_empty_list_section_title" msgid="7684166767384190933">"Neįdiegta jokių suderinamų programų"</string>
     <string name="additional_access_label" msgid="4645249249222528341">"Papildoma prieiga"</string>
     <string name="additional_access_summary" msgid="1076197455435130191">"Ankstesni duomenys, foniniai duomenys"</string>
     <string name="removed_additional_permissions_toast" msgid="3443687215509477284">"Pašalinti papildomi šios programos leidimai"</string>
