--- a/apk/res/values-lv/strings.xml
+++ b/apk/res/values-lv/strings.xml
@@ -444,7 +444,8 @@
     <string name="manage_permissions_learn_more" msgid="2503189875093300767">"Lasīt konfidencialitātes politiku"</string>
     <string name="app_perms_content_provider_24h" msgid="5977152673988158889">"Piekļūts pēdējo 24 stundu laikā"</string>
     <string name="app_access_title" msgid="7137018424885371763">"Lietotnes piekļuve"</string>
-    <string name="connected_apps_empty_list_section_title" msgid="6821215432694207342">"Pašlaik nav instalēta neviena saderīga lietotne"</string>
+    <!-- no translation found for connected_apps_empty_list_section_title (7684166767384190933) -->
+    <skip />
     <string name="additional_access_label" msgid="4645249249222528341">"Papildu piekļuve"</string>
     <string name="additional_access_summary" msgid="1076197455435130191">"Iepriekšējie dati, fona dati"</string>
     <string name="removed_additional_permissions_toast" msgid="3443687215509477284">"Šai lietotnei ir noņemtas papildu atļaujas."</string>
