--- a/apk/res/values-pt-rPT/strings.xml
+++ b/apk/res/values-pt-rPT/strings.xml
@@ -444,7 +444,7 @@
     <string name="manage_permissions_learn_more" msgid="2503189875093300767">"Leia a política de privacidade"</string>
     <string name="app_perms_content_provider_24h" msgid="5977152673988158889">"Acesso nas últimas 24 horas"</string>
     <string name="app_access_title" msgid="7137018424885371763">"Acesso de apps"</string>
-    <string name="connected_apps_empty_list_section_title" msgid="6821215432694207342">"Atualmente, não tem nenhuma app compatível instalada"</string>
+    <string name="connected_apps_empty_list_section_title" msgid="7684166767384190933">"Nenhuma app compatível instalada"</string>
     <string name="additional_access_label" msgid="4645249249222528341">"Acesso adicional"</string>
     <string name="additional_access_summary" msgid="1076197455435130191">"Dados anteriores, dados de segundo plano"</string>
     <string name="removed_additional_permissions_toast" msgid="3443687215509477284">"Autorizações adicionais removidas para esta app"</string>
