--- a/apk/res/values-ru/strings.xml
+++ b/apk/res/values-ru/strings.xml
@@ -444,7 +444,8 @@
     <string name="manage_permissions_learn_more" msgid="2503189875093300767">"Ознакомиться с политикой конфиденциальности"</string>
     <string name="app_perms_content_provider_24h" msgid="5977152673988158889">"Разрешение использовалось в последние 24 часа"</string>
     <string name="app_access_title" msgid="7137018424885371763">"Доступ для приложения"</string>
-    <string name="connected_apps_empty_list_section_title" msgid="6821215432694207342">"На устройстве нет совместимых приложений"</string>
+    <!-- no translation found for connected_apps_empty_list_section_title (7684166767384190933) -->
+    <skip />
     <string name="additional_access_label" msgid="4645249249222528341">"Дополнительные права доступа"</string>
     <string name="additional_access_summary" msgid="1076197455435130191">"Сохраненные данные, фоновый режим"</string>
     <string name="removed_additional_permissions_toast" msgid="3443687215509477284">"У приложения отозваны дополнительные разрешения."</string>
