--- a/apk/res/values-ta/strings.xml
+++ b/apk/res/values-ta/strings.xml
@@ -444,7 +444,8 @@
     <string name="manage_permissions_learn_more" msgid="2503189875093300767">"தனியுரிமைக் கொள்கையைக் காண்க"</string>
     <string name="app_perms_content_provider_24h" msgid="5977152673988158889">"கடந்த 24 மணிநேரத்தில் அணுகியது"</string>
     <string name="app_access_title" msgid="7137018424885371763">"ஆப்ஸ் அணுகல்"</string>
-    <string name="connected_apps_empty_list_section_title" msgid="6821215432694207342">"தற்போது இணக்கமான ஆப்ஸ் எதுவும் நிறுவப்பட்டிருக்கவில்லை"</string>
+    <!-- no translation found for connected_apps_empty_list_section_title (7684166767384190933) -->
+    <skip />
     <string name="additional_access_label" msgid="4645249249222528341">"கூடுதல் அணுகல்"</string>
     <string name="additional_access_summary" msgid="1076197455435130191">"முந்தைய தரவு, பின்புலத் தரவு"</string>
     <string name="removed_additional_permissions_toast" msgid="3443687215509477284">"இந்த ஆப்ஸுக்கான கூடுதல் அனுமதிகள் அகற்றப்பட்டன"</string>
