--- a/apk/res/values-tl/strings.xml
+++ b/apk/res/values-tl/strings.xml
@@ -444,7 +444,7 @@
     <string name="manage_permissions_learn_more" msgid="2503189875093300767">"Basahin ang patakaran sa privacy"</string>
     <string name="app_perms_content_provider_24h" msgid="5977152673988158889">"Na-access sa nakalipas na 24 na oras"</string>
     <string name="app_access_title" msgid="7137018424885371763">"Access ng app"</string>
-    <string name="connected_apps_empty_list_section_title" msgid="6821215432694207342">"Wala kang anumang compatible na naka-install na app sa kasalukuyan"</string>
+    <string name="connected_apps_empty_list_section_title" msgid="7684166767384190933">"Walang naka-install na compatible na app"</string>
     <string name="additional_access_label" msgid="4645249249222528341">"Karagdagang access"</string>
     <string name="additional_access_summary" msgid="1076197455435130191">"Dating data, data sa background"</string>
     <string name="removed_additional_permissions_toast" msgid="3443687215509477284">"Inalis ang mga karagdagang pahintulot para sa app na ito"</string>
