--- a/apk/res/values-bn/strings.xml
+++ b/apk/res/values-bn/strings.xml
@@ -444,8 +444,7 @@
     <string name="manage_permissions_learn_more" msgid="2503189875093300767">"গোপনীয়তা নীতি পড়ুন"</string>
     <string name="app_perms_content_provider_24h" msgid="5977152673988158889">"গত ২৪ ঘণ্টায় অ্যাক্সেস করা হয়েছে"</string>
     <string name="app_access_title" msgid="7137018424885371763">"অ্যাপের অ্যাক্সেস"</string>
-    <!-- no translation found for connected_apps_empty_list_section_title (7684166767384190933) -->
-    <skip />
+    <string name="connected_apps_empty_list_section_title" msgid="7684166767384190933">"এমন কোনও অ্যাপ ইনস্টল করা নেই যা ব্যবহার করা যেতে পারে"</string>
     <string name="additional_access_label" msgid="4645249249222528341">"অতিরিক্ত অ্যাক্সেস"</string>
     <string name="additional_access_summary" msgid="1076197455435130191">"পুরনো ডেটা, ব্যাকগ্রাউন্ড ডেটা"</string>
     <string name="removed_additional_permissions_toast" msgid="3443687215509477284">"এই অ্যাপের জন্য অতিরিক্ত অনুমতি সরানো হয়েছে"</string>
@@ -1185,7 +1184,7 @@
     <string name="no_apps_requesting" msgid="8088684445910698363">"কোনও অ্যাপ অনুমতি দেওয়ার অনুরোধ করেনি"</string>
     <string name="allowed" msgid="4158456017482263737">"অনুমোদিত"</string>
     <string name="not_allowed" msgid="6092523505093372147">"অননুমোদিত"</string>
-    <string name="access_sensor_note" msgid="7949933977197789634">"এই অনুমতি আছে এমন অ্যাপ আপনার ডিভাইসের সেন্সর থেকে <xliff:g id="DATA_TYPE">%s</xliff:g> ডেটা অ্যাক্সেস করতে পারবে।"</string>
+    <string name="access_sensor_note" msgid="7949933977197789634">"এই অনুমতি আছে এমন অ্যাপ আপনার ডিভাইসের সেন্সর থেকে <xliff:g id="DATA_TYPE">%s</xliff:g> অ্যাক্সেস করতে পারবে।"</string>
     <string name="remove_one_permission_for_all" msgid="6732728480265044938">"আপনার স্মার্টওয়াচে সব অ্যাপের জন্য <xliff:g id="DATA_TYPE">%s</xliff:g> অ্যাক্সেস সরাতে চান?"</string>
     <string name="icon_content_check_mark" msgid="358150681017987426">"টিক চিহ্ন"</string>
     <string name="icon_content_cross_mark" msgid="3007762424358780248">"ক্রস চিহ্ন"</string>
