--- a/apk/res/values-ca/strings.xml
+++ b/apk/res/values-ca/strings.xml
@@ -444,8 +444,7 @@
     <string name="manage_permissions_learn_more" msgid="2503189875093300767">"Llegeix la política de privadesa"</string>
     <string name="app_perms_content_provider_24h" msgid="5977152673988158889">"S\'hi ha accedit durant les 24 darreres hores"</string>
     <string name="app_access_title" msgid="7137018424885371763">"Accés de l\'aplicació"</string>
-    <!-- no translation found for connected_apps_empty_list_section_title (7684166767384190933) -->
-    <skip />
+    <string name="connected_apps_empty_list_section_title" msgid="7684166767384190933">"No hi ha cap aplicació compatible instal·lada"</string>
     <string name="additional_access_label" msgid="4645249249222528341">"Accés addicional"</string>
     <string name="additional_access_summary" msgid="1076197455435130191">"Dades anteriors, dades en segon pla"</string>
     <string name="removed_additional_permissions_toast" msgid="3443687215509477284">"S\'han suprimit els permisos addicionals per a aquesta aplicació"</string>
