--- a/apk/res/values-da/strings.xml
+++ b/apk/res/values-da/strings.xml
@@ -444,8 +444,7 @@
     <string name="manage_permissions_learn_more" msgid="2503189875093300767">"Læs privatlivspolitikken"</string>
     <string name="app_perms_content_provider_24h" msgid="5977152673988158889">"Brugt inden for de seneste 24 timer"</string>
     <string name="app_access_title" msgid="7137018424885371763">"Appadgang"</string>
-    <!-- no translation found for connected_apps_empty_list_section_title (7684166767384190933) -->
-    <skip />
+    <string name="connected_apps_empty_list_section_title" msgid="7684166767384190933">"Der er ikke installeret nogen kompatible apps"</string>
     <string name="additional_access_label" msgid="4645249249222528341">"Yderligere adgang"</string>
     <string name="additional_access_summary" msgid="1076197455435130191">"Tidligere data, baggrundsdata"</string>
     <string name="removed_additional_permissions_toast" msgid="3443687215509477284">"Yderligere tilladelser for denne app er fjernet"</string>
