--- a/apk/res/values-el/strings.xml
+++ b/apk/res/values-el/strings.xml
@@ -1184,7 +1184,7 @@
     <string name="no_apps_requesting" msgid="8088684445910698363">"Δεν υπάρχουν αιτήματα από εφαρμογές"</string>
     <string name="allowed" msgid="4158456017482263737">"Επιτρέπεται"</string>
     <string name="not_allowed" msgid="6092523505093372147">"Δεν επιτρέπεται"</string>
-    <string name="access_sensor_note" msgid="7949933977197789634">"Οι εφαρμογές με αυτή την άδεια μπορούν να αποκτήσουν πρόσβαση σε δεδομένα <xliff:g id="DATA_TYPE">%s</xliff:g> από τους αισθητήρες της συσκευής σας."</string>
+    <string name="access_sensor_note" msgid="7949933977197789634">"Οι εφαρμογές με αυτή την άδεια έχουν πρόσβαση σε δεδομένα από τους αισθητήρες της συσκευής σας για: <xliff:g id="DATA_TYPE">%s</xliff:g>."</string>
     <string name="remove_one_permission_for_all" msgid="6732728480265044938">"Κατάργηση πρόσβασης στα δεδομένα <xliff:g id="DATA_TYPE">%s</xliff:g> για όλες τις εφαρμογές στο ρολόι σας;"</string>
     <string name="icon_content_check_mark" msgid="358150681017987426">"Σύμβολο επιλογής"</string>
     <string name="icon_content_cross_mark" msgid="3007762424358780248">"Σύμβολο \"Χ\""</string>
