--- a/apk/res/values-gl/strings.xml
+++ b/apk/res/values-gl/strings.xml
@@ -444,8 +444,7 @@
     <string name="manage_permissions_learn_more" msgid="2503189875093300767">"Consultar a política de privacidade"</string>
     <string name="app_perms_content_provider_24h" msgid="5977152673988158889">"O último acceso produciuse nas últimas 24 horas"</string>
     <string name="app_access_title" msgid="7137018424885371763">"Acceso da aplicación"</string>
-    <!-- no translation found for connected_apps_empty_list_section_title (7684166767384190933) -->
-    <skip />
+    <string name="connected_apps_empty_list_section_title" msgid="7684166767384190933">"Non hai ningunha aplicación compatible instalada"</string>
     <string name="additional_access_label" msgid="4645249249222528341">"Acceso adicional"</string>
     <string name="additional_access_summary" msgid="1076197455435130191">"Datos anteriores, datos en segundo plano"</string>
     <string name="removed_additional_permissions_toast" msgid="3443687215509477284">"Quitáronse os permisos adicionais para esta aplicación"</string>
