--- a/apk/res/values-is/strings.xml
+++ b/apk/res/values-is/strings.xml
@@ -294,7 +294,7 @@
     <string name="body_temperature_lowercase_label" msgid="324124730971992259">"líkamshiti"</string>
     <string name="body_temperature_read_content_description" msgid="5966765249024688738">"Lesa líkamshita"</string>
     <string name="body_temperature_write_content_description" msgid="5498016171067859369">"Skrifa líkamshita"</string>
-    <string name="heart_rate_uppercase_label" msgid="4990167215137642430">"Hjartsláttur"</string>
+    <string name="heart_rate_uppercase_label" msgid="4990167215137642430">"hjartslátt"</string>
     <string name="heart_rate_lowercase_label" msgid="693492686337628283">"hjartsláttur"</string>
     <string name="heart_rate_read_content_description" msgid="4165867166260001259">"Lesa hjartslátt"</string>
     <string name="heart_rate_write_content_description" msgid="2876667918366409170">"Skrifa hjartslátt"</string>
@@ -302,7 +302,7 @@
     <string name="heart_rate_variability_lowercase_label" msgid="2332638559415663836">"breytileg hjartsláttartíðni"</string>
     <string name="heart_rate_variability_read_content_description" msgid="5812707457872629556">"Lesa breytilega hjartsláttartíðni"</string>
     <string name="heart_rate_variability_write_content_description" msgid="3628171603035566114">"Skrifa breytilega hjartsláttartíðni"</string>
-    <string name="oxygen_saturation_uppercase_label" msgid="1396254185616418355">"Súrefnismettun"</string>
+    <string name="oxygen_saturation_uppercase_label" msgid="1396254185616418355">"súrefnismettun"</string>
     <string name="oxygen_saturation_lowercase_label" msgid="7264179897533866327">"súrefnismettun"</string>
     <string name="oxygen_saturation_read_content_description" msgid="4756434113425028212">"Lesa súrefnismettun"</string>
     <string name="oxygen_saturation_write_content_description" msgid="7189901097196830875">"Skrifa súrefnismettun"</string>
@@ -314,7 +314,7 @@
     <string name="resting_heart_rate_lowercase_label" msgid="4533866739695973169">"hjartsláttur í hvíld"</string>
     <string name="resting_heart_rate_read_content_description" msgid="1068160055773401020">"Lesa hjartslátt í hvíld"</string>
     <string name="resting_heart_rate_write_content_description" msgid="8848198128082739995">"Skrifa hjartslátt í hvíld"</string>
-    <string name="skin_temperature_uppercase_label" msgid="4880306019368461268">"Hitastig húðar"</string>
+    <string name="skin_temperature_uppercase_label" msgid="4880306019368461268">"hitastig húðar"</string>
     <string name="skin_temperature_lowercase_label" msgid="7456421703641980581">"hitastig húðar"</string>
     <string name="skin_temperature_read_content_description" msgid="1896127631429717621">"Lesa hitastig húðar"</string>
     <string name="skin_temperature_write_content_description" msgid="6448587289116206085">"Skrifa hitastig húðar"</string>
@@ -444,8 +444,7 @@
     <string name="manage_permissions_learn_more" msgid="2503189875093300767">"Lesa persónuverndarstefnuna"</string>
     <string name="app_perms_content_provider_24h" msgid="5977152673988158889">"Opnað síðasta sólarhringinn"</string>
     <string name="app_access_title" msgid="7137018424885371763">"Aðgangur forrita"</string>
-    <!-- no translation found for connected_apps_empty_list_section_title (7684166767384190933) -->
-    <skip />
+    <string name="connected_apps_empty_list_section_title" msgid="7684166767384190933">"Engin samhæfð forrit uppsett"</string>
     <string name="additional_access_label" msgid="4645249249222528341">"Aukinn aðgangur"</string>
     <string name="additional_access_summary" msgid="1076197455435130191">"Eldri gögn, bakgrunnsgögn"</string>
     <string name="removed_additional_permissions_toast" msgid="3443687215509477284">"Viðbótarheimildir fjarlægðar fyrir þetta forrit"</string>
