--- a/apk/res/values-mk/strings.xml
+++ b/apk/res/values-mk/strings.xml
@@ -444,8 +444,7 @@
     <string name="manage_permissions_learn_more" msgid="2503189875093300767">"Прочитајте ја политиката за приватност"</string>
     <string name="app_perms_content_provider_24h" msgid="5977152673988158889">"Пристапено во минатите 24 часа"</string>
     <string name="app_access_title" msgid="7137018424885371763">"Пристап на апликацијата"</string>
-    <!-- no translation found for connected_apps_empty_list_section_title (7684166767384190933) -->
-    <skip />
+    <string name="connected_apps_empty_list_section_title" msgid="7684166767384190933">"Не се инсталирани компатибилни апликации"</string>
     <string name="additional_access_label" msgid="4645249249222528341">"Дополнителен пристап"</string>
     <string name="additional_access_summary" msgid="1076197455435130191">"Минати податоци, податоци во заднина"</string>
     <string name="removed_additional_permissions_toast" msgid="3443687215509477284">"Отстранети се дополнителните дозволи за апликацијава"</string>
