--- a/apk/res/values-mn/strings.xml
+++ b/apk/res/values-mn/strings.xml
@@ -444,8 +444,7 @@
     <string name="manage_permissions_learn_more" msgid="2503189875093300767">"Нууцлалын бодлогыг унших"</string>
     <string name="app_perms_content_provider_24h" msgid="5977152673988158889">"Сүүлийн 24 цагийн дотор хандсан"</string>
     <string name="app_access_title" msgid="7137018424885371763">"Аппын хандалт"</string>
-    <!-- no translation found for connected_apps_empty_list_section_title (7684166767384190933) -->
-    <skip />
+    <string name="connected_apps_empty_list_section_title" msgid="7684166767384190933">"Тохирох ямар ч апп суулгаагүй"</string>
     <string name="additional_access_label" msgid="4645249249222528341">"Нэмэлт хандах эрх"</string>
     <string name="additional_access_summary" msgid="1076197455435130191">"Өмнөх өгөгдөл, арын өгөгдөл"</string>
     <string name="removed_additional_permissions_toast" msgid="3443687215509477284">"Энэ аппын нэмэлт зөвшөөрлүүдийг хассан"</string>
