--- a/apk/res/values-ms/strings.xml
+++ b/apk/res/values-ms/strings.xml
@@ -444,8 +444,7 @@
     <string name="manage_permissions_learn_more" msgid="2503189875093300767">"Baca dasar privasi"</string>
     <string name="app_perms_content_provider_24h" msgid="5977152673988158889">"Diakses dalam tempoh 24 jam yang lalu"</string>
     <string name="app_access_title" msgid="7137018424885371763">"Akses apl"</string>
-    <!-- no translation found for connected_apps_empty_list_section_title (7684166767384190933) -->
-    <skip />
+    <string name="connected_apps_empty_list_section_title" msgid="7684166767384190933">"Tiada apl serasi yang dipasang"</string>
     <string name="additional_access_label" msgid="4645249249222528341">"Akses tambahan"</string>
     <string name="additional_access_summary" msgid="1076197455435130191">"Data terdahulu, data latar"</string>
     <string name="removed_additional_permissions_toast" msgid="3443687215509477284">"Kebenaran tambahan bagi apl ini dialih keluar"</string>
