--- a/apk/res/values-or/strings.xml
+++ b/apk/res/values-or/strings.xml
@@ -444,8 +444,7 @@
     <string name="manage_permissions_learn_more" msgid="2503189875093300767">"ଗୋପନୀୟତା ନୀତି ପଢ଼ନ୍ତୁ"</string>
     <string name="app_perms_content_provider_24h" msgid="5977152673988158889">"ଗତ 24 ଘଣ୍ଟାରେ ଆକ୍ସେସ କରାଯାଇଛି"</string>
     <string name="app_access_title" msgid="7137018424885371763">"ଆପ ଆକ୍ସେସ"</string>
-    <!-- no translation found for connected_apps_empty_list_section_title (7684166767384190933) -->
-    <skip />
+    <string name="connected_apps_empty_list_section_title" msgid="7684166767384190933">"କୌଣସି କମ୍ପାଟିବଲ ଆପ୍ସ ଇନଷ୍ଟଲ କରାଯାଇନାହିଁ"</string>
     <string name="additional_access_label" msgid="4645249249222528341">"ଅତିରିକ୍ତ ଆକ୍ସେସ"</string>
     <string name="additional_access_summary" msgid="1076197455435130191">"ଅତୀତର ଡାଟା, ବେକଗ୍ରାଉଣ୍ଡ ଡାଟା"</string>
     <string name="removed_additional_permissions_toast" msgid="3443687215509477284">"ଏହି ଆପ ପାଇଁ ଅତିରିକ୍ତ ଅନୁମତିକୁ କାଢ଼ି ଦିଆଯାଇଛି"</string>
