--- a/apk/res/values-pa/strings.xml
+++ b/apk/res/values-pa/strings.xml
@@ -444,8 +444,7 @@
     <string name="manage_permissions_learn_more" msgid="2503189875093300767">"ਪਰਦੇਦਾਰੀ ਨੀਤੀ ਪੜ੍ਹੋ"</string>
     <string name="app_perms_content_provider_24h" msgid="5977152673988158889">"ਪਿਛਲੇ 24 ਘੰਟਿਆਂ ਵਿੱਚ ਪਹੁੰਚ ਕੀਤੀ ਗਈ"</string>
     <string name="app_access_title" msgid="7137018424885371763">"ਐਪ ਤੱਕ ਪਹੁੰਚ"</string>
-    <!-- no translation found for connected_apps_empty_list_section_title (7684166767384190933) -->
-    <skip />
+    <string name="connected_apps_empty_list_section_title" msgid="7684166767384190933">"ਕੋਈ ਵੀ ਅਨੁਰੂਪ ਐਪ ਸਥਾਪਤ ਨਹੀਂ ਕੀਤੀ ਗਈ"</string>
     <string name="additional_access_label" msgid="4645249249222528341">"ਵਧੀਕ ਪਹੁੰਚ"</string>
     <string name="additional_access_summary" msgid="1076197455435130191">"ਪਿਛਲਾ ਡਾਟਾ, ਬੈਕਗ੍ਰਾਊਂਡ ਡਾਟਾ"</string>
     <string name="removed_additional_permissions_toast" msgid="3443687215509477284">"ਇਸ ਐਪ ਲਈ ਵਧੀਕ ਇਜਾਜ਼ਤਾਂ ਨੂੰ ਹਟਾਇਆ ਗਿਆ"</string>
