--- a/apk/res/values-ro/strings.xml
+++ b/apk/res/values-ro/strings.xml
@@ -444,8 +444,7 @@
     <string name="manage_permissions_learn_more" msgid="2503189875093300767">"Citește politica de confidențialitate"</string>
     <string name="app_perms_content_provider_24h" msgid="5977152673988158889">"Accesate în ultimele 24 de ore"</string>
     <string name="app_access_title" msgid="7137018424885371763">"Accesul la aplicații"</string>
-    <!-- no translation found for connected_apps_empty_list_section_title (7684166767384190933) -->
-    <skip />
+    <string name="connected_apps_empty_list_section_title" msgid="7684166767384190933">"Nu sunt instalate aplicații compatibile"</string>
     <string name="additional_access_label" msgid="4645249249222528341">"Acces suplimentar"</string>
     <string name="additional_access_summary" msgid="1076197455435130191">"Date anterioare, date de fundal"</string>
     <string name="removed_additional_permissions_toast" msgid="3443687215509477284">"S-au eliminat permisiunile suplimentare pentru această aplicație"</string>
