--- a/apk/res/values-si/strings.xml
+++ b/apk/res/values-si/strings.xml
@@ -444,8 +444,7 @@
     <string name="manage_permissions_learn_more" msgid="2503189875093300767">"පෞද්ගලිකත්ව ප්‍රතිපත්තිය කියවන්න"</string>
     <string name="app_perms_content_provider_24h" msgid="5977152673988158889">"පසුගිය පැය 24 තුළ ප්‍රවේශ විය"</string>
     <string name="app_access_title" msgid="7137018424885371763">"යෙදුම් ප්‍රවේශය"</string>
-    <!-- no translation found for connected_apps_empty_list_section_title (7684166767384190933) -->
-    <skip />
+    <string name="connected_apps_empty_list_section_title" msgid="7684166767384190933">"අනුකූල යෙදුම් කිසිවක් ස්ථාපනය කර නැත"</string>
     <string name="additional_access_label" msgid="4645249249222528341">"අතිරේක ප්‍රවේශය"</string>
     <string name="additional_access_summary" msgid="1076197455435130191">"අතීත දත්ත, පසුබිම් දත්ත"</string>
     <string name="removed_additional_permissions_toast" msgid="3443687215509477284">"මෙම යෙදුම සඳහා අතිරේක අවසර ඉවත් කරන ලදි"</string>
