--- a/apk/res/values-uz/strings.xml
+++ b/apk/res/values-uz/strings.xml
@@ -444,8 +444,7 @@
     <string name="manage_permissions_learn_more" msgid="2503189875093300767">"Maxfiylik siyosatini oʻqish"</string>
     <string name="app_perms_content_provider_24h" msgid="5977152673988158889">"Oxirgi 24 soat ichida kirilgan"</string>
     <string name="app_access_title" msgid="7137018424885371763">"Ilovaga ruxsat"</string>
-    <!-- no translation found for connected_apps_empty_list_section_title (7684166767384190933) -->
-    <skip />
+    <string name="connected_apps_empty_list_section_title" msgid="7684166767384190933">"Mos ilovalar oʻrnatilmagan"</string>
     <string name="additional_access_label" msgid="4645249249222528341">"Kengaytirilgan ruxsat"</string>
     <string name="additional_access_summary" msgid="1076197455435130191">"Saqlangan maʼlumotlar, fon rejimi"</string>
     <string name="removed_additional_permissions_toast" msgid="3443687215509477284">"Bu ilova uchun qoʻshimcha ruxsatlar olib tashlandi"</string>
