--- a/apk/res/values-zh-rCN/strings.xml
+++ b/apk/res/values-zh-rCN/strings.xml
@@ -444,8 +444,7 @@
     <string name="manage_permissions_learn_more" msgid="2503189875093300767">"阅读隐私权政策"</string>
     <string name="app_perms_content_provider_24h" msgid="5977152673988158889">"上次访问时间：过去 24 小时内"</string>
     <string name="app_access_title" msgid="7137018424885371763">"应用访问权限"</string>
-    <!-- no translation found for connected_apps_empty_list_section_title (7684166767384190933) -->
-    <skip />
+    <string name="connected_apps_empty_list_section_title" msgid="7684166767384190933">"未安装任何兼容应用"</string>
     <string name="additional_access_label" msgid="4645249249222528341">"其他访问权限"</string>
     <string name="additional_access_summary" msgid="1076197455435130191">"历史数据、后台数据"</string>
     <string name="removed_additional_permissions_toast" msgid="3443687215509477284">"已撤消此应用的其他权限"</string>
